--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,18 @@
+v0.0.3:
+  date: 2015-11-11
+  changes:
+    - Contorller Generator
+
+v0.0.2:
+  date: 2015-11-10
+  changes:
+    - Module&Router Generator
+
+v0.0.1:
+  date: 2015-11-10
+  changes:
+    - Model Generator
+
 v0.0.0:
   date: 2015-10-16
   changes:
