--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,12 @@
 v0.0.3:
   date: 2015-11-11
   changes:
-    - Contorller Generator
+    - Controller Generator
 
 v0.0.2:
   date: 2015-11-10
   changes:
-    - Module&Router Generator
+    - Feature-Module+Router Generator
 
 v0.0.1:
   date: 2015-11-10
